--- a/adol_op3_AR_manager/config/ini_pose for_AR.yaml
+++ b/adol_op3_AR_manager/config/ini_pose for_AR.yaml
@@ -34,22 +34,22 @@ via_pose :
 # target pose [deg]
 
 tar_pose :
-  1 : 15      	# r_sho_pitch
-  2 : -15       # l_sho_pitch
-  3 : -45   	# r_sho_roll
-  4 : 45   	    # l_sho_roll
-  5 : 45   	    # r_el
-  6 : -45   	    # l_el
+  1 : 0 #15      	# r_sho_pitch
+  2 : 0 #-15       # l_sho_pitch
+  3 : 0 #-45   	# r_sho_roll
+  4 : 0 #45   	    # l_sho_roll
+  5 : 0 #45   	    # r_el
+  6 : 0 #-45   	    # l_el
   7 : 0   	    # r_hip_yaw
   8 : 0   	    # l_hip_yaw
   9 : 0   	    # r_hip_roll
   10 : 0   	    # l_hip_roll
-  11 : 10   	# r_hip_pitch
-  12 : -10   	# l_hip_pitch
-  13 : -20   	# r_knee
-  14 : 20   	# l_knee
-  15 : -10   	# r_ank_pitch
-  16 : 10   	# l_ank_pitch
+  11 : 15   	# r_hip_pitch
+  12 : -15   	# l_hip_pitch
+  13 : -30   	# r_knee
+  14 : 30   	# l_knee
+  15 : -15   	# r_ank_pitch
+  16 : 15   	# l_ank_pitch
   17 : 0   	    # r_ank_roll
   18 : 0   	    # l_ank_roll
   19 : 0        # head_pan 
